# shapley-mcis-mes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  black.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
data/: ag.csv  bias_comparison.csv  diabetes.csv  housing.csv  variance_comparison.csv  wine.csv  wvg.csv
src/shapley_mcis_mes/approx_algorithms/: mcis.py  mes.py  os.py  s_mcis.py  s_mes.py
src/shapley_mcis_mes/approx_algorithms/utils/: check_number_of_samples_used.py  sample_subset_including_player.py  shap_utils.py
src/shapley_mcis_mes/exact_algorithms/: brute_force_calculation_via_sum.py
src/shapley_mcis_mes/exact_algorithms/utils/: powerset_iterator.py
src/shapley_mcis_mes/games/: airport_game.py  bankruptcy_game.py  explainability_game.py  glove_game.py  weighted_voting_game.py
src/shapley_mcis_mes/games/utils/: base_game.py
src/shapley_mcis_mes/scripts/: bias_comparisons.py  experiments.py  mle_visualization.py  mse_comparisons.py  variance_comparisons.py
src/shapley_mcis_mes/scripts/utils/: plot_bias_comparison.py  plot_mse_comparison.py  plot_variance_comparison.py  run_bias_comparison.py  run_comparison.py  run_mse_comparison.py  run_variance_comparison.py  show_comparison.py  update_plt_params.py
src/shapley_mcis_mes/utils/: interfaces.py
