[project]
name = "paper-mcis-mes"
version = "0.0.0"
requires-python = ">=3.12.7"
authors = [
  {name = "Tim Pollmann"},
  {name = "Jochen Staudacher"}
]
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
    "click",
    "numpy",
    "pandas",
    "matplotlib",
    "PyQt5",
    "seaborn",
    "scikit-learn"
]
[project.optional-dependencies]
development = [
    "pre_commit"
]

[project.scripts]
run-ag = "shapley_mcis_mes.scripts.experiments:ag"
run-wvg = "shapley_mcis_mes.scripts.experiments:wvg"
run-diabetes = "shapley_mcis_mes.scripts.experiments:diabetes"
run-housing = "shapley_mcis_mes.scripts.experiments:housing"
run-wine = "shapley_mcis_mes.scripts.experiments:wine"
