[project]
name = "shapley-mcis-mes"
version = "0.0.0"
requires-python = ">=3.12"
authors = [
  {name = "Tim Pollmann"},
  {name = "Jochen Staudacher"}
]
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
    "click",
    "numpy",
    "pandas",
    "matplotlib",
    "PyQt5",
    "seaborn",
    "scikit-learn"
]
[project.optional-dependencies]
development = [
    "pre_commit"
]

[project.scripts]
run-ag-mse-comparison = "shapley_mcis_mes.scripts.mse_comparisons:ag"
run-wvg-mse-comparison = "shapley_mcis_mes.scripts.mse_comparisons:wvg"
run-diabetes-mse-comparison = "shapley_mcis_mes.scripts.mse_comparisons:diabetes"
run-housing-mse-comparison = "shapley_mcis_mes.scripts.mse_comparisons:housing"
run-wine-mse-comparison = "shapley_mcis_mes.scripts.mse_comparisons:wine"
run-bias-comparison = "shapley_mcis_mes.scripts.bias_comparisons:default"
run-variance-comparison = "shapley_mcis_mes.scripts.variance_comparisons:default"
